<?xml version="1.0"?>
<package format="2">
  <name>point_at_node</name>
  <version>0.0.0</version>
  <description>The point_at_node package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lyontech@todo.todo">lyontech</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>point_at_msgs</build_depend>
  <build_depend>point_at_srvs</build_depend>
  <build_depend>yolov8_ros</build_depend>
  <build_depend>yolov8_ros_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>point_at_msgs</exec_depend>
  <exec_depend>point_at_srvs</exec_depend>
  <exec_depend>yolov8_ros</exec_depend>
  <exec_depend>yolov8_ros_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
